--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -424,3 +424,27 @@ input[type=number] {
   gap: 5px !important;
   flex-wrap: wrap;
 }
+
+.hotel-card {
+  display: inline-block;
+  width: 100%;
+}
+
+.hotel-card .hotel-card-icon {
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 22px;
+  margin: 10px;
+  box-shadow: 5px 3px 10px #150f0f4d;
+  border-radius: 5px;
+}
+
+.float-end {
+  float: right !important;
+}
+
+.clearfix {
+  box-sizing: border-box;
+  display: flex;
+}
